_generated-doc/3.2/config/quarkus-csrf-reactive-csrf-reactive-config.adoc

:summaryTableId: quarkus-csrf-reactive-csrf-reactive-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-csrf-reactive-csrf-reactive-config_configuration]]link:#quarkus-csrf-reactive-csrf-reactive-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.form-field-name]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.form-field-name[quarkus.csrf-reactive.form-field-name]`


[.description]
--
Form field name which keeps a CSRF token.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_FORM_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_FORM_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`csrf-token`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-name]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-name[quarkus.csrf-reactive.cookie-name]`


[.description]
--
CSRF cookie name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_COOKIE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_COOKIE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`csrf-token`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-max-age]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-max-age[quarkus.csrf-reactive.cookie-max-age]`


[.description]
--
CSRF cookie max age.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_COOKIE_MAX_AGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_COOKIE_MAX_AGE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-path]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-path[quarkus.csrf-reactive.cookie-path]`


[.description]
--
CSRF cookie path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_COOKIE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_COOKIE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-domain]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-domain[quarkus.csrf-reactive.cookie-domain]`


[.description]
--
CSRF cookie domain.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_COOKIE_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_COOKIE_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-force-secure]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.cookie-force-secure[quarkus.csrf-reactive.cookie-force-secure]`


[.description]
--
If enabled the CSRF cookie will have its 'secure' parameter set to 'true' when HTTP is used. It may be necessary when running behind an SSL terminating reverse proxy. The cookie will always be secure if HTTPS is used even if this property is set to false.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_COOKIE_FORCE_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_COOKIE_FORCE_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.create-token-path]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.create-token-path[quarkus.csrf-reactive.create-token-path]`


[.description]
--
Create CSRF token only if the HTTP GET relative request path matches one of the paths configured with this property. Use a comma to separate multiple path values.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_CREATE_TOKEN_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_CREATE_TOKEN_PATH+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.token-size]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.token-size[quarkus.csrf-reactive.token-size]`


[.description]
--
Random CSRF token size in bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_TOKEN_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_TOKEN_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`16`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.token-signature-key]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.token-signature-key[quarkus.csrf-reactive.token-signature-key]`


[.description]
--
CSRF token HMAC signature key, if this key is set then it must be at least 32 characters long.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_TOKEN_SIGNATURE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_TOKEN_SIGNATURE_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.verify-token]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.verify-token[quarkus.csrf-reactive.verify-token]`


[.description]
--
Verify CSRF token in the CSRF filter. If this property is enabled then the input stream will be read and cached by the CSRF filter to verify the token. If you prefer then you can disable this property and compare CSRF form and cookie parameters in the application code using JAX-RS jakarta.ws.rs.FormParam which refers to the `form-field-name` form property and jakarta.ws.rs.CookieParam which refers to the `CsrfReactiveConfig++#++cookieName` cookie. Note that even if the CSRF token verification in the CSRF filter is disabled, the filter will still perform checks to ensure the token is available, has the correct `token-size` in bytes and that the Content-Type HTTP header is either 'application/x-www-form-urlencoded' or 'multipart/form-data'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_VERIFY_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_VERIFY_TOKEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.require-form-url-encoded]]`link:#quarkus-csrf-reactive-csrf-reactive-config_quarkus.csrf-reactive.require-form-url-encoded[quarkus.csrf-reactive.require-form-url-encoded]`


[.description]
--
Require that only 'application/x-www-form-urlencoded' or 'multipart/form-data' body is accepted for the token verification to proceed. Disable this property for the CSRF filter to avoid verifying the token for POST requests with other content types. This property is only effective if `verify-token` property is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CSRF_REACTIVE_REQUIRE_FORM_URL_ENCODED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CSRF_REACTIVE_REQUIRE_FORM_URL_ENCODED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
